--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,3 +1,19 @@
-<h2 id="title">Welcome to Ember</h2>
+<nav class="navbar navbar-default">
+<div class="container-fluid">
+<!-- Brand and toggle get grouped for better mobile display -->
+<div class="navbar-header">
+<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+<span class="sr-only">Toggle navigation</span>
+<span class="icon-bar"></span>
+<span class="icon-bar"></span>
+<span class="icon-bar"></span>
+</button>
+{{#link-to 'clients' class="navbar-brand"}}Clients{{/link-to}}
+</div><!-- /.navbar-collapse -->
+</div><!-- /.container-fluid -->
+</nav>
+
 
 {{outlet}}
+
+
